telemetry/derive/tests/ui_fail/not_execute.stderr
error: Function should be an `impl execute`
 --> tests/ui_fail/not_execute.rs:5:4
  |
5 | fn exequte(wsv: &WorldStateView<World>) -> Result<(), ()> {
  |    ^^^^^^^

warning: unused imports: `WorldStateView`, `World`
 --> tests/ui_fail/not_execute.rs:1:23
  |
1 | use iroha_core::wsv::{World, WorldStateView};
  |                       ^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
